--- a/task-quick-start.adoc
+++ b/task-quick-start.adoc
@@ -61,7 +61,7 @@ BlueXP copy and sync guides you through the installation process when you create
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-4.png[Four] Create your first sync relationship
 
 [role="quick-margin-para"]
-Log in to https://console.bluexp.netapp.com/[BlueXP^], click *Sync*, and then drag and drop your selections for the source and target. Follow the prompts to complete the setup. link:task-creating-relationships.html[Learn more].
+Log in to https://console.bluexp.netapp.com/[BlueXP^], select *Sync*, and then drag and drop your selections for the source and target. Follow the prompts to complete the setup. link:task-creating-relationships.html[Learn more].
 
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-5.png[Five] Pay for your sync relationships after your free trial ends
 
