--- a/task-creating-relationships.adoc
+++ b/task-creating-relationships.adoc
@@ -184,12 +184,12 @@ TIP: This same feature is available when syncing data to StorageGRID and IBM Clo
 
 BlueXP copy and sync starts syncing data between the source and target.
 
-== Create sync relationships from Cloud Data Sense
+== Create sync relationships from BlueXP classification
 
-BlueXP copy and sync is integrated with Cloud Data Sense. From within Data Sense, you can select the source files that you'd like to sync to a target location using BlueXP copy and sync.
+BlueXP copy and sync is integrated with BlueXP classification. From within BlueXP classification, you can select the source files that you'd like to sync to a target location using BlueXP copy and sync.
 
-After you initiate a data sync from Cloud Data Sense, all of the source information is contained in a single step and only requires you to enter a few key details. You then choose the target location for the new sync relationship.
+After you initiate a data sync from BlueXP classification, all of the source information is contained in a single step and only requires you to enter a few key details. You then choose the target location for the new sync relationship.
 
-image:screenshot-sync-data-sense.png[A screenshot that shows the Data Sense Integration page that appears after starting a new sync directly from Cloud Data Sense.]
+image:screenshot-sync-data-sense.png[A screenshot that shows the BlueXP classification Integration page that appears after starting a new sync directly from BlueXP classification.]
 
-https://docs.netapp.com/us-en/bluexp-classification/task-managing-highlights.html#copying-and-synchronizing-source-files-to-a-target-system[Learn how to start a sync relationship from Cloud Data Sense^].
+https://docs.netapp.com/us-en/bluexp-classification/task-managing-highlights.html#copying-and-synchronizing-source-files-to-a-target-system[Learn how to start a sync relationship from BlueXP classification^].
